--- a/index.html
+++ b/index.html
@@ -7,12 +7,16 @@
         <link href="css/styles.css" rel="stylesheet" />
     </head>
     <body class="container">
+        <div class="d-flex justify-content-center mt-3">
+            <h2>log4bj: Thoughts on Software Engineering Topics</h2>
+        </div>
         <div class="d-flex justify-content-start mt-3">
             <h4>Table of Contents</h4>
         </div>
         <ul>
             <li><a href="posts/regex-for-finding-a-post-office-address.html">Regex for Finding a Post Office Address</a></li>
             <li><a href="posts/singleton-objects-and-thread-synchronization.html">Singleton Objects and Thread Synchronization</a></li>
+            <li><a href="posts/i-passed-cloud-plus-cv0-002.html">I Passed Cloud+ CV0-002!</a></li>
         </ul>
     </body>
 </html>
