Added Jost font to make site look nice.

--- a/index.html
+++ b/index.html
@@ -4,19 +4,22 @@
 
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz" crossorigin="anonymous"></script>
-        <link href="css/styles.css" rel="stylesheet" />
+        <link href="static/css/styles.css" rel="stylesheet" />
     </head>
     <body class="container">
-        <div class="d-flex justify-content-center mt-3">
-            <h2>log4bj: Thoughts on Software Engineering Topics</h2>
+        <div class="d-flex justify-content-center mt-3 title">
+            <h2>LOG4BJ</h2>
+        </div>
+        <div class="d-flex justify-content-center title">
+            <h4>Thoughts on Software Engineering Topics</h4>
         </div>
         <div class="d-flex justify-content-start mt-3">
             <h4>Table of Contents</h4>
         </div>
-        <ul>
+        <ol reversed>
             <li><a href="posts/regex-for-finding-a-post-office-address.html">Regex for Finding a Post Office Address</a></li>
             <li><a href="posts/singleton-objects-and-thread-synchronization.html">Singleton Objects and Thread Synchronization</a></li>
             <li><a href="posts/i-passed-cloud-plus-cv0-002.html">I Passed Cloud+ CV0-002!</a></li>
-        </ul>
+        </ol>
     </body>
 </html>
